apps/may-12-new-loadbalancer-test1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: may-12-new-loadbalancer-test1
  labels:
    app: may-12-new-loadbalancer-test1
    backstage.io/kubernetes-id: may-12-new-loadbalancer-test1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: may-12-new-loadbalancer-test1
  template:
    metadata:
      labels:
        app: may-12-new-loadbalancer-test1
        backstage.io/kubernetes-id: may-12-new-loadbalancer-test1
    spec:
      containers:
        - name: may-12-new-loadbalancer-test1
          image: jaykumark7/may-12-new-loadbalancer-test1:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
